# simple-xsrf

./: .gitignore  README.md  pyproject.toml
simple_xsrf/: exceptions.py  lib.py  token.py
tests/: test_token.py
